--- a/index.html
+++ b/index.html
@@ -32,9 +32,19 @@
     <h1>welcome to <a href="../">pixton</a> blog <a href="add.html"><button style="float: right; margin-top: 10px;">add to blog</button></a></h1>
     <hr>
     <div class="years">
-        <!-- years -->
+        <!-- ys -->
+<details>
+<summary>2026</summary>
+<!--posts2026-->
+<a href='2026/01/28/index.html'>c</a>
+<br>
+</details>
     </div>
 <!--titles-->
+<a href='2026/01/28/index.html'><h2>c</h2><a>
+<br>
+<i><p>posted on01/28/2026</p></i>
+<br>
 <p>powered by chzBlog</p>
 </body>
 </html>
