added setup script and adjusted the index to fit accordingly

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h1>welcome to <a href="../">pixton</a> blog <a href="add.html"><button style="float: right; margin-top: 10px;">add to blog</button></a></h1>
+    <!-- blog-name -->
     <hr>
     <div class="years">
         <!-- ys -->
